--- a/lang/es.json
+++ b/lang/es.json
@@ -6,5 +6,101 @@
   "errors": {
     "member_has_no_permissions": "No tienes permisos para usar este comando.",
     "error": "Ocurrió un error al procesar tu solicitud. Por favor, intenta nuevamente más tarde."
+  },
+  "commands": {
+    "ping": {
+      "description": "Verificar la latencia del bot"
+    },
+    "setup": {
+      "description": "Configurar el bot para este servidor"
+    },
+    "quick-battle": {
+      "description": "Iniciar una batalla rápida",
+      "args": [
+        {
+          "name": "timeout",
+          "description": "Tiempo de espera en segundos"
+        },
+        {
+          "name": "custom_environment",
+          "description": "Genérico o personalizado"
+        },
+        {
+          "name": "setting",
+          "description": "Estilo/ambiente de batalla"
+        }
+      ],
+      "choices": {
+        "custom_environment": {
+          "generic": "Genérico",
+          "custom": "Personalizado"
+        }
+      },
+      "communication": {
+        "request_embed_title": "Solicitud de Batalla Rápida",
+        "request_embed_description": "Una solicitud de batalla rápida ha sido enviada por {owner}.",
+        "request_embed_participants": "Participantes: ",
+        "environment_field": "Entorno: ",
+        "timeout_field": "Tiempo de espera: {timeout} segundos",
+        "join_button": "Unirse",
+        "leave_button": "Salir",
+        "start_button": "Iniciar",
+        "abort_button": "Cancelar",
+        "joined_message": "{user} se ha unido a la batalla.",
+        "left_message": "{user} ha salido de la batalla.",
+        "already_joined": "Ya te has unido a esta batalla.",
+        "not_joined": "No estás en esta batalla.",
+        "only_owner_can_start": "Solo el dueño de la batalla puede iniciarla.",
+        "only_owner_can_abort": "Solo el dueño de la batalla puede cancelarla.",
+        "battle_starting": "Iniciando la batalla...",
+        "battle_aborted": "La batalla ha sido cancelada.",
+        "battle_aborted_message": "La solicitud de batalla ha sido cancelada.",
+        "create_environment_message": "Creando entorno...\n Esperando participantes: {participants}"
+      },
+      "environment": {
+        "title": "Creación de Entorno",
+        "description": "Por favor, envía tu descripción del entorno. Haz clic en el botón de abajo para enviar.",
+        "button_label": "Enviar Entorno",
+        "modal_title": "Envío de Entorno",
+        "input_label": "Descripción del Entorno",
+        "input_placeholder": "Describe el entorno de batalla...",
+        "remaining": "Esperando envíos de:",
+        "none_remaining": "¡Todos los participantes han enviado!",
+        "not_participant": "No eres un participante en esta batalla.",
+        "already_submitted": "Ya has enviado tu entorno.",
+        "empty_input": "La descripción del entorno no puede estar vacía.",
+        "submitted": "¡Tu entorno ha sido enviado exitosamente!"
+      },
+      "fighter": {
+        "title": "Creación de Luchador",
+        "description": "Por favor, crea tu luchador. Haz clic en el botón de abajo para enviar.",
+        "button_label": "Crear Luchador",
+        "modal_title": "Creación de Luchador",
+        "name_label": "Nombre del Luchador",
+        "name_placeholder": "Ingresa el nombre de tu luchador...",
+        "description_label": "Descripción del Luchador",
+        "description_placeholder": "Describe tu luchador...",
+        "remaining": "Esperando envíos de:",
+        "none_remaining": "¡Todos los participantes han enviado!",
+        "not_participant": "No eres un participante en esta batalla.",
+        "already_submitted": "Ya has enviado tu luchador.",
+        "empty_input": "El nombre y la descripción del luchador no pueden estar vacíos.",
+        "submitted": "¡Tu luchador ha sido creado exitosamente!"
+      },
+      "strategy": {
+        "title": "Envío de Estrategia",
+        "description": "Por favor, envía tu estrategia de batalla. Haz clic en el botón de abajo para enviar.",
+        "button_label": "Enviar Estrategia",
+        "modal_title": "Envío de Estrategia",
+        "input_label": "Estrategia de Batalla",
+        "input_placeholder": "Describe tu estrategia de batalla...",
+        "remaining": "Esperando envíos de:",
+        "none_remaining": "¡Todos los participantes han enviado!",
+        "not_participant": "No eres un participante en esta batalla.",
+        "already_submitted": "Ya has enviado tu estrategia.",
+        "empty_input": "La estrategia no puede estar vacía.",
+        "submitted": "¡Tu estrategia ha sido enviada exitosamente!"
+      }
+    }
   }
 }
