--- a/lang/ua.json
+++ b/lang/ua.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "hello": "Привіт, {user}!",
+    "welcome": "Привіт, я {name}-v{version}!\nБот, який створюватиме і оцінюватиме найдивовижніші бої для вас!\n\nЩоб почати, будь ласка, використайте команду /config для налаштування бота.",
     "pong": "Понг! {ms}мс"
   },
   "errors": {
@@ -12,6 +13,9 @@
       "description": "Перевірити затримку бота"
     },
     "setup": {
+      "description": "Налаштувати бота для цього сервера"
+    },
+    "config": {
       "description": "Налаштувати бота для цього сервера"
     },
     "quick-battle": {
@@ -101,6 +105,34 @@
         "empty_input": "Стратегія не може бути порожньою.",
         "submitted": "Вашу стратегію успішно надіслано!"
       }
+    }
+  },
+  "config": {
+    "embed": {
+      "title": "Конфігурація бота",
+      "fields": {
+        "ai_active": "ШІ активний",
+        "language": "Мова",
+        "webhook_configured": "Webhook налаштовано"
+      }
+    },
+    "buttons": {
+      "apply": "Застосувати",
+      "ai_config": "Налаштування ШІ",
+      "webhook_change": "Змінити Webhook"
+    },
+    "modal": {
+      "ai_config": {
+        "title": "Налаштування ШІ"
+      },
+      "webhook": {
+        "title": "Налаштування Webhook",
+        "url_label": "URL Webhook"
+      }
+    },
+    "messages": {
+      "applied": "Конфігурацію успішно застосовано!",
+      "changes_pending": "⚠️ Зміни очікують - Натисніть Застосувати для збереження"
     }
   }
 }
