--- a/lang/ua.json
+++ b/lang/ua.json
@@ -27,7 +27,7 @@
         },
         {
           "name": "custom_environment",
-          "description": "Загальне або власне"
+          "description": "Стандартне або власне"
         },
         {
           "name": "setting",
@@ -36,7 +36,7 @@
       ],
       "choices": {
         "custom_environment": {
-          "generic": "Загальне",
+          "generic": "Стандартне",
           "custom": "Власне"
         }
       },
@@ -132,7 +132,8 @@
     },
     "messages": {
       "applied": "Конфігурацію успішно застосовано!",
-      "changes_pending": "⚠️ Зміни очікують - Натисніть Застосувати для збереження"
+      "changes_pending": "⚠️ Зміни очікують - Натисніть Застосувати для збереження",
+      "no_changes": "Немає змін для застосування."
     }
   }
 }
