--- a/lang/ua.json
+++ b/lang/ua.json
@@ -6,14 +6,13 @@
   },
   "errors": {
     "member_has_no_permissions": "У вас немає дозволу на використання цієї команди.",
-    "error": "Під час обробки вашого запиту сталася помилка. Будь ласка, спробуйте пізніше."
+    "error": "Під час обробки вашого запиту сталася помилка. Будь ласка, спробуйте пізніше.",
+    "message_too_long": "Повідомлення занадто довге ({length} символів). Воно було збережено у файл.",
+    "quick-battle_error": "Під час початку бою сталася помилка. Будь ласка, спробуйте пізніше."
   },
   "commands": {
     "ping": {
-      "description": "Перевірити затримку бота"
-    },
-    "setup": {
-      "description": "Налаштувати бота для цього сервера"
+      "description": "Перевірити час відклику бота"
     },
     "config": {
       "description": "Налаштувати бота для цього сервера"
@@ -23,21 +22,21 @@
       "args": [
         {
           "name": "timeout",
-          "description": "Таймаут у секундах"
+          "description": "Час очікування у секундах"
         },
         {
           "name": "custom_environment",
-          "description": "Стандартне або власне"
+          "description": "Стандартне чи кастомне"
         },
         {
           "name": "setting",
-          "description": "Налаштування/стиль бою"
+          "description": "Сеттинг бою"
         }
       ],
       "choices": {
         "custom_environment": {
           "generic": "Стандартне",
-          "custom": "Власне"
+          "custom": "Кастомне"
         }
       },
       "communication": {
@@ -45,7 +44,7 @@
         "request_embed_description": "Запит на швидкий бій надіслано користувачем {owner}.",
         "request_embed_participants": "Учасники: ",
         "environment_field": "Середовище: ",
-        "timeout_field": "Таймаут: {timeout} секунд",
+        "timeout_field": "Час очікування: {timeout} секунд",
         "join_button": "Приєднатися",
         "leave_button": "Покинути",
         "start_button": "Почати",
@@ -63,12 +62,12 @@
       },
       "environment": {
         "title": "Створення середовища",
-        "description": "Будь ласка, надішліть опис середовища. Натисніть кнопку нижче, щоб надіслати.",
+        "description": "Будь ласка, надішліть опис середовища. Натисніть кнопку нижче, щоб почати.",
         "button_label": "Надіслати середовище",
-        "modal_title": "Надсилання середовища",
+        "modal_title": "Середовище",
         "input_label": "Опис середовища",
         "input_placeholder": "Опишіть середовище бою...",
-        "remaining": "Очікування надсилань від:",
+        "remaining": "Очікування відповіді від:",
         "none_remaining": "Всі учасники надіслали свої дані!",
         "not_participant": "Ви не є учасником цього бою.",
         "already_submitted": "Ви вже надіслали своє середовище.",
@@ -76,34 +75,74 @@
         "submitted": "Ваше середовище успішно надіслано!"
       },
       "fighter": {
-        "title": "Створення бійця",
-        "description": "Будь ласка, створіть свого бійця. Натисніть кнопку нижче, щоб надіслати.",
-        "button_label": "Створити бійця",
-        "modal_title": "Створення бійця",
-        "name_label": "Ім'я бійця",
-        "name_placeholder": "Введіть ім'я вашого бійця...",
-        "description_label": "Опис бійця",
-        "description_placeholder": "Опишіть вашого бійця...",
-        "remaining": "Очікування надсилань від:",
+        "title": "Створення персонажа",
+        "description": "Будь ласка, створіть свого персонажа. Натисніть кнопку нижче, щоб надіслати.",
+        "button_label": "Створити персонажа",
+        "modal_title": "Створення персонажа",
+        "name_label": "Ім'я персонажа",
+        "name_placeholder": "Введіть ім'я вашого персонажа...",
+        "description_label": "Опис персонажа",
+        "description_placeholder": "Опишіть вашого персонажа...",
+        "remaining": "Очікування відповіді від:",
         "none_remaining": "Всі учасники надіслали свої дані!",
         "not_participant": "Ви не є учасником цього бою.",
-        "already_submitted": "Ви вже надіслали свого бійця.",
-        "empty_input": "Ім'я та опис бійця не можуть бути порожніми.",
-        "submitted": "Ваш бієць успішно створено!"
+        "already_submitted": "Ви вже надіслали свого персонажа.",
+        "empty_input": "Ім'я та опис персонажа не можуть бути порожніми.",
+        "submitted": "Вашого персонажа успішно створено!"
       },
       "strategy": {
-        "title": "Надсилання стратегії",
-        "description": "Будь ласка, надішліть свою бойову стратегію. Натисніть кнопку нижче, щоб надіслати.",
+        "title": "Стратегія",
+        "description": "Будь ласка, надішліть свою стратегію. Натисніть кнопку нижче, щоб надіслати.",
         "button_label": "Надіслати стратегію",
         "modal_title": "Надсилання стратегії",
         "input_label": "Бойова стратегія",
         "input_placeholder": "Опишіть свою бойову стратегію...",
-        "remaining": "Очікування надсилань від:",
+        "remaining": "Очікування відповіді від:",
         "none_remaining": "Всі учасники надіслали свої дані!",
         "not_participant": "Ви не є учасником цього бою.",
         "already_submitted": "Ви вже надіслали свою стратегію.",
         "empty_input": "Стратегія не може бути порожньою.",
         "submitted": "Вашу стратегію успішно надіслано!"
+      }
+    },
+    "suggest": {
+      "description": "Запропонувати функцію або повідомити про помилку",
+      "prompt": "Оберіть тип і одну чи кілька категорій, а потім натисніть кнопку, щоб описати пропозицію.",
+      "success": "Дякуємо! Вашу пропозицію збережено.",
+      "response": "Дякуємо за вашу пропозицію: \"{suggestion}\"",
+      "button": {
+        "open_modal": "Написати пропозицію"
+      },
+      "modal": {
+        "title": "Поділіться своєю пропозицією",
+        "title_label": "Назва",
+        "title_placeholder": "Короткий опис...",
+        "label": "Деталі пропозиції",
+        "placeholder": "Опишіть вашу ідею, проблему чи відгук..."
+      },
+      "types": {
+        "minor": "Незначна проблема",
+        "major": "Серйозна проблема",
+        "request": "Запит",
+        "improvement": "Покращення",
+        "feedback": "Відгук"
+      },
+      "categories": {
+        "category_1": "Категорія 1",
+        "category_2": "Категорія 2",
+        "category_3": "Категорія 3"
+      },
+      "placeholders": {
+        "type": "Оберіть тип пропозиції",
+        "category": "Оберіть категорії"
+      },
+      "errors": {
+        "selection": "Спершу оберіть тип і хоча б одну категорію.",
+        "empty": "Назва та деталі не можуть бути порожніми.",
+        "generic": "Сталася помилка. Спробуйте пізніше."
+      },
+      "auto_feedback": {
+        "default": "Вашу пропозицію переглянуто. Дякуємо за відгук!"
       }
     }
   },
